fix: Use justify-content: space-between only for pages that
have less height that the full height of the broeser window to make
sure to have no whitespace below the footer. In other words, the content
fills up the space nicely.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6,7 +6,6 @@ body {
     min-height: 100vh;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
 }
 
 .active-link {
